--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.android.application"
     // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
+    // id 'com.google.gms.google-services'
     // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
@@ -26,9 +26,10 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.bloc_test_app"
+    namespace "com.example.water_boiler_rfid_labeler"
     compileSdk flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
+    ndkVersion = "26.1.10909125"
+    compileSdkVersion 36
 
     compileOptions {
         // sourceCompatibility JavaVersion.VERSION_1_8
@@ -39,7 +40,7 @@ android {
 
     kotlinOptions {
         // jvmTarget = '1.8'
-        jvmTarget = '11'
+        jvmTarget = '17'
     }
 
     sourceSets {
@@ -48,12 +49,12 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.bloc_test_app"
+        applicationId "com.example.water_boiler_rfid_labeler"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 23  
+        minSdkVersion flutter.minSdkVersion 
         //minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
