--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="bloc_test_app"
+        android:label="water_boiler_rfid_labeler"
         android:name="${applicationName}"
         android:icon="@mipmap/logo">
         <activity
