--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: bloc_test_app
-description: "A new Flutter project."
+name: water_boiler_rfid_labeler
+description: "Water Boiler RFID Labeler is a Flutter application designed to manage and label water boiler RFID tags efficiently. It allows users to scan, store, and manage RFID data for water boilers, enhancing operational efficiency and tracking capabilities."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -48,7 +48,12 @@ dependencies:
   equatable: ^2.0.5
   intl: ^0.19.0
   font_awesome_flutter: ^10.7.0
-  
+  shared_preferences: ^2.2.3
+  excel: ^2.1.0
+  share_plus: ^7.2.1
+  path_provider: ^2.1.4
+  flutter_email_sender: ^6.0.2
+
   
 
 dev_dependencies:
