--- a/my_rfid_plugin/android/app/build.gradle
+++ b/my_rfid_plugin/android/app/build.gradle
@@ -27,7 +27,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.bloc_test_app"
+    namespace "com.example.water_boiler_rfid_labeler"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -49,7 +49,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.bloc_test_app"
+        applicationId "com.example.water_boiler_rfid_labeler"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 23  
